--- a/src/componentes/game/game.css
+++ b/src/componentes/game/game.css
@@ -5,19 +5,23 @@
 p{
     font-family: 'Robotop', sans-serif !important;
     font-weight: 800 !important;
+    text-align: center;
 }
 .card_game{
-    background-image: url("https://fotografias.antena3.com/clipping/cmsimages02/2020/01/10/ABE9B428-C9D0-4676-80E0-D1E512848828/57.jpg");
     align-items: center;
     font-weight: bold;
-    color: white;
+    color: black;
     padding: 50px;
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 5px;
     width: 800px;
-    margin-left: 75px;
+    margin-left: 174px;
     height: 550px;
+    background-color: rgb(247, 242, 242);
+    box-shadow: -5px 5px 9px rgb(170, 165, 165);
+    
+    
 }
 
 .counter{
@@ -27,6 +31,7 @@ p{
     color: white !important;
     border-radius: 24px  !important;
     pointer-events: none;
+    margin-left: 48%
 }
 
 .options{
@@ -34,18 +39,19 @@ p{
 }
 
 button{
-    width: 90%;
+    width: 50%;
     margin-right: 50px;
 }
 
 .card_winning{
-    background-image: url("https://fotografias.antena3.com/clipping/cmsimages02/2020/01/10/ABE9B428-C9D0-4676-80E0-D1E512848828/57.jpg");
     width: 155px;
     height: 425px;
     margin-top: -452px;
-    margin-left: 998px;
-    color: white;
+    margin-left: 1151px;
+    color: black;
     padding: 20px;
+    background-color: rgb(247, 242, 242);
+    box-shadow: -5px 5px 9px rgb(146, 142, 142);
 }
 
 .optionsbtn{
