--- a/src/componentes/game/game.css
+++ b/src/componentes/game/game.css
@@ -1,7 +1,10 @@
 .nav-item{
     font-family: 'Robotop', sans-serif !important;
-    font-weight: 900 !important;   
+    font-weight: 900 !important;  
+    background-color: rgb(247, 242, 242); 
 }
+
+
 p{
     font-family: 'Robotop', sans-serif !important;
     font-weight: 800 !important;
@@ -31,7 +34,7 @@ p{
     color: white !important;
     border-radius: 24px  !important;
     pointer-events: none;
-    margin-left: 48%
+    margin-left: 46%;
 }
 
 .options{
@@ -54,6 +57,17 @@ button{
     box-shadow: -5px 5px 9px rgb(146, 142, 142);
 }
 
-.optionsbtn{
-    margin-left: 42px;
+
+.optionsButton{
+    margin-left:123px;
+}
+
+.navy{
+    cursor: pointer;
+    font-family: 'Robotop', sans-serif !important;
+    font-weight: 900 !important;   
+}
+
+.nav-link{
+    color: black !important;
 }
